Make container have min height to avoid jumping behavior when tweets refresh, remove console.log

--- a/twittlerstyle.css
+++ b/twittlerstyle.css
@@ -40,10 +40,9 @@ input{
 .col-container{
 	width: 100%;	
 	display: table;	
-	
-
-	
+	min-height: 800px	
 }
+
 
  
 .col-left{
